[add] better scss code structure

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,53 +1,9 @@
-@import 'variables';
-@import 'variables';
-@import 'fonts';
-@import 'base';
-@import 'header';
-@import 'content';
-@import 'footer';
+@import 'abstracts/variables';
 
+@import 'base/reset';
+@import 'base/fonts';
 
-
-
-// $bg-color: #de5c57;
-// $tr-bg-color-hover:#e02e2e;
-// $tr-border-left-color:#d5d5d5;
-// $font-size: 22px;
-
-// #form {
-//     margin: 5px auto 20px;
-//     input {
-//         font-size: $font-size;
-//         font-family: robotoLight;
-//     }
-//     input[type="submit"] {
-//         background-color: $bg-color;
-//         outline: none;
-//         font-family: robotoLight;
-//         border: 1px solid;
-//     }
-// }
-// table {
-//     border-collapse: collapse;
-//     thead {
-//         font-size: $font-size;
-//         background-color: $bg-color;
-//         text-align: center;
-//         font-family: robotoBold;
-
-//         td:hover {
-//             cursor: pointer;
-//             outline: solid 1px;
-//         }
-//     }
-//     tbody {
-//         tr:hover {
-//             background-color: $tr-bg-color-hover;
-//         }
-//         td {
-//             padding: 10px;
-//             font-family: robotoLight;
-//             border-left: solid 1px $tr-border-left-color;
-//         }
-//     }
-// }
+@import 'layout/header';
+@import 'layout/navigation';
+@import 'layout/content';
+@import 'layout/footer';
