--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -1,10 +1,7 @@
-header {
-  font-size: 15px;
-
+footer {
   button {
     color: $button-color;
     background-color: $button-bg;
-    font-size: $font-large;
   }
 
   button:hover {
