[clean] header.scss

--- a/src/style/layout/_header.scss
+++ b/src/style/layout/_header.scss
@@ -1,11 +1,3 @@
-header {
+.header {
 
-  button {
-    color: $button-color;
-    background-color: $button-bg;
-  }
-
-  button:hover {
-    background-color: $button-bg-hover;
-  }
 }
