--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -5,5 +5,5 @@
 
 @import 'layout/header';
 @import 'layout/navigation';
-@import 'layout/content';
+@import 'layout/main';
 @import 'layout/footer';
