--- a/src/style/layout/_main.scss
+++ b/src/style/layout/_main.scss
@@ -13,3 +13,12 @@
   flex-direction: column;
   align-items: center;
 }
+.title1{
+  text-shadow: 0 0 5px rgba(0, 0, 0, 0.07);
+  color: #ffffff;
+  font-family: "Segoe WP - Semibold";
+  font-size: 52px;
+  font-weight: 400;
+  text-transform: uppercase;
+  margin-top: 170px;
+}
