--- a/src/style/layout/_main.scss
+++ b/src/style/layout/_main.scss
@@ -22,3 +22,10 @@
   text-transform: uppercase;
   margin-top: 170px;
 }
+.title2{
+  font-size: 48px;
+  font-weight: 300;
+  text-transform: uppercase;
+  font-family: "Segoe WP - Semibold";
+  color: #ffffff;
+}
