--- a/src/style/layout/_main.scss
+++ b/src/style/layout/_main.scss
@@ -29,3 +29,17 @@
   font-family: "Segoe WP - Semibold";
   color: #ffffff;
 }
+.button{
+  width: 274px;
+  height: 58px;
+  margin-top: 45px;
+  box-shadow: inset 0 1px 0 rgba(112, 243, 84, 0.75);
+  border: 6px solid rgba(0, 0, 0, 0.12);
+  background-color: #636363;
+  background-image: linear-gradient(to top, #34ae22 0%, #6ed258 100%);
+  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2);
+  color: #ffffff;
+  font-family: "Segoe WP";
+  font-size: 34px;
+  font-weight: 700;
+}
