--- a/src/style/layout/_main.scss
+++ b/src/style/layout/_main.scss
@@ -43,3 +43,14 @@
   font-size: 34px;
   font-weight: 700;
 }
+.subMain{
+  min-height: 245px;
+  min-width: 481px;
+  margin-top: 69px;
+  border-bottom: solid 7px  #51c03d;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 10px;
+}
