--- a/src/style/base/_fonts.scss
+++ b/src/style/base/_fonts.scss
@@ -7,3 +7,9 @@
   font-family: robotoLight;
   src: url('../fonts/Roboto/Roboto-Light.ttf');
 }
+
+@font-face {
+  font-family: robotoLight;
+  src: url('../fonts/Segoewp/Segoe-WP.ttf');
+}
+
