--- a/src/style/layout/_main.scss
+++ b/src/style/layout/_main.scss
@@ -12,6 +12,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 69px;
 }
 .title1{
   text-shadow: 0 0 5px rgba(0, 0, 0, 0.07);
@@ -52,5 +53,12 @@
   flex-direction: column;
   align-items: center;
   background-color: #fff;
-  border-radius: 10px;
+  border-radius: 2px;
+}
+.subtitle{
+  margin-top: 23px;
+  color: #868686;
+  font-family: "Segoe-WP";
+  font-size: 22px;
+  font-weight: 300;
 }
