[change] name of font-family

--- a/src/style/layout/_main.scss
+++ b/src/style/layout/_main.scss
@@ -58,7 +58,7 @@
 .subtitle{
   margin-top: 23px;
   color: #868686;
-  font-family: "Segoe-WP";
+  font-family: "SegoeWP";
   font-size: 22px;
   font-weight: 300;
 }
