--- a/src/style/layout/_main.scss
+++ b/src/style/layout/_main.scss
@@ -1,14 +1,13 @@
 .main{
-  width: 100%;
-  min-height: 1100px;
   background-color: #ececec;
-  background-image: url('../../image/beach.png');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  min-height: 532px;
 }
 .containerMain{
+  background-size: 100%;
+  background-position: center;
+  width: 100%;
+  height: 535px;
+  background-image: url('../../image/beach.png');
+  background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
   align-items: center;
