--- a/src/style/layout/_header.scss
+++ b/src/style/layout/_header.scss
@@ -4,6 +4,7 @@
 .containerHeader{
   min-width: 980px;
   padding: 0 10px;
+  height: 68px;
   display: flex;
   justify-content: space-between;
 }
@@ -20,7 +21,7 @@
 
 .navigation{
   margin-right: 152px;
-  margin-top: 30px;
+  margin-top: 16px;
   margin-bottom: 21px;
   &__link{
     text-decoration: none;
