[add]images for menu

--- a/src/style/layout/_main.scss
+++ b/src/style/layout/_main.scss
@@ -86,6 +86,33 @@
   &__img--azheekal{
     background-image: url('../../image/Azheekal.png');
   }
+  &__img--ooty{
+    background-image: url('../../image/Ooty.png');
+  }
+  &__img--munnar{
+    background-image: url('../../image/Munnar.png');
+  }
+  &__img--humpi{
+    background-image: url('../../image/Humpi.png');
+  }
+  &__img--kovalam{
+    background-image: url('../../image/Kovalam.png');
+  }
+  &__img--kuttanad{
+    background-image: url('../../image/Kuttanad.png');
+  }
+  &__img--thenmala{
+    background-image: url('../../image/Thenmala.png');
+  }
+  &__img--beach{
+    background-image: url('../../image/Beach1.png');
+  }
+  &__img--munnar2{
+    background-image: url('../../image/Munnar1.png');
+  }
+  &__img--punaloor{
+    background-image: url('../../image/punaloor.png');
+  }
   
 }
 // .cardsItem__img--azheekal{
