[change] styles for main.scss

--- a/src/style/layout/_main.scss
+++ b/src/style/layout/_main.scss
@@ -67,6 +67,7 @@
   justify-content: space-between;
   padding-left: 25px;
   padding-right: 25px;
+  margin-top: 27px;
 }
 .cardsItem{
   display: flex;
@@ -85,6 +86,8 @@
     font-size: 14px;
     font-weight: 300;
     height: 12px;
+    margin-top: 6px;
+    
   }
   &__img--azheekal{
     background-image: url('../../image/Azheekal.png');
@@ -116,8 +119,7 @@
   &__img--punaloor{
     background-image: url('../../image/punaloor.png');
   }
-  
 }
-// .cardsItem__img--azheekal{
-//   background-image: url('../../image/Azheekal.png');
-// }
+.cardsItem:nth-child(n + 6){
+  margin-top: 12px;
+}
