[add]styles for class 'subtitle1'

--- a/src/style/layout/_main.scss
+++ b/src/style/layout/_main.scss
@@ -123,3 +123,11 @@
 .cardsItem:nth-child(n + 6){
   margin-top: 12px;
 }
+.subtitle1{
+  color: #7e7c7c;
+  font-family: "Segoe WP";
+  font-size: 26px;
+  font-weight: 300;
+  line-height: 34px;
+  margin-top: 63px;
+}
