[add]styles for class 'subtitle2'

--- a/src/style/layout/_main.scss
+++ b/src/style/layout/_main.scss
@@ -131,3 +131,10 @@
   line-height: 34px;
   margin-top: 63px;
 }
+.subtitle2{
+  color: #7e7c7c;
+  font-family: "Segoe WP";
+  font-size: 22px;
+  font-weight: 300;
+  line-height: 34px;
+}
