--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -1,10 +1,13 @@
-footer {
-  button {
-    color: $button-color;
-    background-color: $button-bg;
-  }
-
-  button:hover {
-    background-color: $button-bg-hover;
-  }
+.footer {
+  margin-top: 591px;
+  background-color: #414141;
+  height: 31px;
+}
+.footerTitle{
+  opacity: 0.5;
+  color: #ffffff;
+  font-family: "Segoe WP";
+  font-size: 14px;
+  font-weight: 300;
+  text-align: center;
 }
