--- a/src/style/layout/_header.scss
+++ b/src/style/layout/_header.scss
@@ -3,10 +3,11 @@
 }
 .containerHeader{
   min-width: 980px;
-  padding: 0 10px;
+  padding: 0 154px;
   height: 68px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .logo{
@@ -15,14 +16,10 @@
   background-image: url('../../image/Indo_Tourism.png');
   background-repeat: no-repeat;
   background-size: contain;
-  margin: 20px 0;
-  margin-left: 144px;
 }
 
 .navigation{
-  margin-right: 152px;
-  margin-top: 16px;
-  margin-bottom: 21px;
+  
   &__link{
     text-decoration: none;
     color: #676767;
@@ -30,12 +27,10 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 36px;
-
-
   }
   .navigation__link--active, .navigation__link:hover {
-    width: 98px;
-    height: 31px;
+    width: 100px;
+    height: 33px;
     box-shadow: inset 0 1px 0 rgba(136, 211, 251, 0.75);
     border: 1px solid #1784d1;
     background-image: linear-gradient(to top, #1f84e7 0%, #37b3f8 100%);
