--- a/src/style/base/_fonts.scss
+++ b/src/style/base/_fonts.scss
@@ -1,15 +1,15 @@
 @font-face {
   font-family: robotoBold;
-  src: url('../fonts/Roboto/Roboto-Bold.ttf');
+  src: url(../fonts/Roboto-Bold.ttf);
 }
 
 @font-face {
   font-family: robotoLight;
-  src: url('../fonts/Roboto/Roboto-Light.ttf');
+  src: url(../fonts/Roboto-Light.ttf);
 }
 
 @font-face {
   font-family: SegoeWP;
-  src: url('../fonts/Segoewp/Segoe-WP.ttf');
+  src: url(../fonts/Segoe-WP.ttf);
 }
 
