--- a/src/style/layout/_header.scss
+++ b/src/style/layout/_header.scss
@@ -23,7 +23,7 @@
   &__link{
     text-decoration: none;
     color: #676767;
-    font-family: "Segoe WPN - Semi Light";
+    font-family: "SegoeWP";
     font-size: 16px;
     font-weight: 400;
     line-height: 36px;
